--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>if the temperture outside is 25 degrees fahrenheit. it will be _____ degrees celsius</p>
+    <p id="temp"></p>
+    <script src="apps.js"></script>
 </body>
 </html>
