--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IMED 2351-03</title>
 </head>
 <body>
     <p>if the temperture outside is 25 degrees fahrenheit. it will be _____ degrees celsius</p>
